White space fix

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@ body {
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+}
+
+#root {
+height :100%
 }
 
 h1, h2, h3 {
